--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ header{
     display: flex;
     align-items: flex-end;
     column-gap: 5rem;
-
     margin-bottom: 10px;
 }
 .nav-link{
@@ -92,7 +91,11 @@ header{
     background-color: #CC5587;
 }
 .img_cadastro{
-width: 30%;
+width: 45%;
 height: 10%;
-margin-right: 1%    ;
+float: right;
+}
+.tela{
+    
+
 }
