--- a/style.css
+++ b/style.css
@@ -1,80 +1,142 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-*{
+
+* {
     font-family: 'Poppins', sans-serif;
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
     scroll-padding-top: 2rem;
 }
-body{
+
+body {
     background: #E7E7E7;
 }
-img{
-    width: 100%;   
+
+img {
+    width: 100%;
 }
-a{
+
+a {
     text-decoration: none;
 }
-li{
+
+li {
     list-style: none;
 }
-.container{
+
+.container {
     max-width: 1200px;
     width: 100%;
 }
-header{
+
+header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 100;
 }
-.nav{
+
+.nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 5px;
 }
 
-.logo{
+.logo {
     width: 6%;
     height: 6%;
 }
-.navbar{
+
+.navbar {
     display: flex;
     align-items: flex-end;
     column-gap: 5rem;
     margin-bottom: 10px;
 }
-.nav-link{
+
+.nav-link {
     font-size: 1rem;
-    padding:1rem;
+    padding: 1rem;
     border-radius: 0.2rem;
     color: #B71258;
 }
-.nav-link:hover{
+
+.nav-link:hover {
     color: #B71258;
-    background:#D2D2D2 ;
+    background: #D2D2D2;
     transition: 0.3s all linear;
 }
-.cadastro{
-  background-color: whitesmoke;
-  width: 30%;
-  height: 10%;
-  margin-top: 20%;
-  margin-left: 5%;
-  border-radius: 15px;
-  
+
+.cadastro {
+    background-color: whitesmoke;
+    width: 30%;
+    height: 10%;
+    padding: 50px;
+    margin-top: 15%;
+    margin-left: 5%;
+    border-radius: 15px;
 }
+
+form{
+    width: 100%;
+    max-width: 350px;
+    padding: 2%;
+    
+}
+
+.input{
+    width: 100%;
+    padding: 5px;
+    border: 0;
+    border-bottom: 2px solid #D2D2D2;
+    outline: 0;
+    font-size: 16px;
+    background-color: whitesmoke;
+}
+
+.input:focus,
+.input:valid{
+    border-bottom: 2px solid #B71258;
+
+}
+
+.input:focus ~ label,
+.input:valid ~ label{
+    transform: translateY(-24px);
+    font-size: 12px;
+    color: #B71258;
+}
+
 .input-field{
-    display:grid;
-    justify-content:center
+    width: 100%;
+    position: relative;
+    margin: 30px 0;
+    
 }
-.btn_cadastro{
-    width: 130px;
+
+.input-field .h1{
+    font-size: 1.96rem;
+    color: rgb(92, 92, 92);
+
+}
+
+.input-field label {
+    position: absolute;
+    font-size: 16px;
+    left: 0;
+    bottom: 5px;
+    color: rgb(0, 0, 0);
+    cursor: text;
+    transition: 0.5s ease-in-out;
+}
+
+.btn_cadastro {
+    width: 280px;
     height: 40px;
-    border:none;
+    border: none;
     outline: none;
     border-radius: 49px;
     cursor: pointer;
@@ -83,19 +145,23 @@ header{
     color: white;
     text-transform: uppercase;
     font-weight: 600;
-    margin:10px 0;
+    margin: 10px 0;
     justify-content: center;
-    
 }
-.btn_cadastro:hover{
+
+.btn_cadastro:hover {
     background-color: #CC5587;
 }
-.img_cadastro{
-width: 45%;
-height: 10%;
-float: right;
-}
-.tela{
-    
 
+.img_cadastro {
+    width: 45%;
+    height: 10%;
+    margin-top: 12%;
+    margin-left: 10%;
+}
+
+.tela {
+    width: 100%;
+    height: 100%;
+    display: flex;
 }
