--- a/style.css
+++ b/style.css
@@ -74,8 +74,8 @@ header {
     background-color: whitesmoke;
     width: 30%;
     height: 10%;
-    padding: 50px;
-    margin-top: 15%;
+    padding: 40px;
+    margin-top: 17%;
     margin-left: 5%;
     border-radius: 15px;
 }
@@ -83,13 +83,11 @@ header {
 form{
     width: 100%;
     max-width: 350px;
-    padding: 2%;
-    
 }
 
 .input{
     width: 100%;
-    padding: 5px;
+    
     border: 0;
     border-bottom: 2px solid #D2D2D2;
     outline: 0;
@@ -113,13 +111,14 @@ form{
 .input-field{
     width: 100%;
     position: relative;
-    margin: 30px 0;
+    /* margin: 30px 0; */
     
 }
 
 .input-field .h1{
     font-size: 1.96rem;
     color: rgb(92, 92, 92);
+    margin-bottom: 5%;
 
 }
 
@@ -127,7 +126,7 @@ form{
     position: absolute;
     font-size: 16px;
     left: 0;
-    bottom: 5px;
+    bottom:1px;
     color: rgb(0, 0, 0);
     cursor: text;
     transition: 0.5s ease-in-out;
