começo tela 1 cadastro

--- a/style1.css
+++ b/style1.css
@@ -17,3 +17,99 @@ body {
     max-width: 1200px;
     width: 100%;
 }
+
+.cadastro {
+    background-color: whitesmoke;
+    width: 30%;
+    height: 10%;
+    padding: 40px;
+    margin-top: 15%;
+    margin-left: 7%;
+    border-radius: 15px;
+    display: none;
+}
+
+form{
+    width: 100%;
+    max-width: 350px;
+}
+
+.input{
+    width: 100%;
+    
+    border: 0;
+    border-bottom: 2px solid #D2D2D2;
+    outline: 0;
+    font-size: 16px;
+    background-color: whitesmoke;
+}
+
+.input:focus,
+.input:valid{
+    border-bottom: 2px solid #B71258;
+
+}
+
+.input:focus ~ label,
+.input:valid ~ label{
+    transform: translateY(-24px);
+    font-size: 12px;
+    color: #B71258;
+}
+
+.input-field{
+    width: 100%;
+    position: relative;
+    /* margin: 30px 0; */
+    
+}
+
+.input-field .h1{
+    font-size: 1.96rem;
+    color: rgb(92, 92, 92);
+    margin-bottom: 5%;
+
+}
+
+.input-field label {
+    position: absolute;
+    font-size: 16px;
+    left: 0;
+    bottom:1px;
+    color: rgb(0, 0, 0);
+    cursor: text;
+    transition: 0.5s ease-in-out;
+}
+
+.btn_cadastro {
+    width: 280px;
+    height: 40px;
+    border: none;
+    outline: none;
+    border-radius: 49px;
+    cursor: pointer;
+    background-color: #B71258;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: white;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin: 10px 0;
+    justify-content: center;
+}
+
+.btn_cadastro:hover {
+    background-color: #CC5587;
+}
+
+.img_cadastro {
+    width: 50%;
+    height: 10%;
+    margin-top: 10%;
+    margin-left: 10%;
+}
+
+.tela {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
