--- a/style.css
+++ b/style.css
@@ -163,4 +163,12 @@ form{
     width: 100%;
     height: 100%;
     display: flex;
+    /* display: none; */
+}
+
+#idtela{
+     display: none;
+}
+.cadastro2{
+    
 }
